--- a/roulette.html
+++ b/roulette.html
@@ -3,210 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Zombie Lord | Strategic Engine</title>
+    <title>Live Node | Strategic Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=JetBrains+Mono:wght@400;700&display=swap');
-        :root { --bg: #020617; --emerald: #10b981; --blood: #ef4444; }
+        :root { --bg: #020617; --emerald: #10b981; }
         body {
-            background-color: var(--bg);
-            background-image: linear-gradient(to bottom, rgba(2, 6, 23, 0.9), rgba(2, 6, 23, 0.98)), 
-                              url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
-            background-size: cover; background-attachment: fixed;
-            color: #f8fafc; font-family: 'JetBrains Mono', monospace;
+            background-color: var(--bg); background-image: linear-gradient(to bottom, rgba(2, 6, 23, 0.95), rgba(2, 6, 23, 1)), url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
+            background-size: cover; color: #f8fafc; font-family: 'JetBrains Mono', monospace;
         }
         .cinzel { font-family: 'Cinzel', serif; }
-        .emerald-text { color: var(--emerald); text-shadow: 0 0 10px rgba(16, 185, 129, 0.4); }
-        .config-input { background: rgba(0, 0, 0, 0.7); border: 1px solid rgba(16, 185, 129, 0.3); color: white; padding: 12px; border-radius: 4px; width: 100%; outline: none; }
-        .btn-zombie { background: transparent; border: 1px solid var(--emerald); color: var(--emerald); padding: 12px 24px; text-transform: uppercase; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        .btn-zombie:hover { background: var(--emerald); color: #000; box-shadow: 0 0 20px rgba(16, 185, 129, 0.4); }
-        .shard { background: rgba(15, 23, 42, 0.9); border: 1px solid rgba(16, 185, 129, 0.2); backdrop-filter: blur(16px); -webkit-backdrop-filter: blur(16px); }
+        .emerald-text { color: var(--emerald); }
+        .shard { background: rgba(15, 23, 42, 0.6); border: 1px solid rgba(16, 185, 129, 0.1); backdrop-filter: blur(20px); }
+        .numpad-btn { background: rgba(0,0,0,0.6); border: 1px solid rgba(16, 185, 129, 0.2); padding: 15px; font-size: 1.2rem; font-weight: bold; transition: 0.2s; }
+        .numpad-btn:hover { border-color: var(--emerald); background: var(--emerald); color: black; }
+        .history-pill { background: rgba(0,0,0,0.4); border-left: 3px solid var(--emerald); padding: 8px 12px; margin-bottom: 5px; font-size: 10px; }
     </style>
 </head>
-<body class="p-4 md:p-8">
+<body class="p-4 overflow-hidden h-screen flex flex-col">
 
-    <nav class="flex justify-between items-center mb-8 bg-slate-950/60 p-4 border border-emerald-900/20 backdrop-blur-md sticky top-0 z-40">
-        <h2 class="cinzel emerald-text text-sm tracking-widest uppercase">System_Vault</h2>
-        <div class="flex gap-4">
-            <button onclick="window.location.href='lobby.html'" class="text-[9px] uppercase font-bold text-slate-400">Lobby</button>
-            <button onclick="triggerLogout()" class="text-[9px] uppercase font-bold text-blood">Abandon</button>
+    <nav class="flex justify-between items-center mb-4 bg-slate-950/60 p-4 border border-emerald-900/20">
+        <div class="flex flex-col">
+            <span class="cinzel emerald-text text-xs uppercase tracking-widest">Live_Execution_Node</span>
+            <span id="active-protocol" class="text-[8px] text-slate-500 uppercase tracking-tighter">Syncing Protocol...</span>
         </div>
+        <button onclick="window.location.href='roulette-config.html'" class="text-[9px] border border-emerald-900 px-4 py-2 hover:bg-emerald-900/20 uppercase font-bold">Calibration</button>
     </nav>
 
-    <div id="entry-portal" class="fixed inset-0 z-50 flex items-center justify-center bg-slate-950/98 hidden">
-        <div class="max-w-md w-full p-10 shard rounded-sm text-center">
-            <h1 class="cinzel text-4xl emerald-text mb-2 uppercase">The_Vault</h1>
-            <p class="text-[9px] text-slate-500 tracking-[0.4em] mb-12 uppercase">Accessing User Memory</p>
-            <div class="flex flex-col gap-6">
-                <button onclick="showConfig()" class="btn-zombie text-lg">New Trial</button>
-                <button onclick="toggleArchiveList(true)" class="btn-zombie border-slate-600 text-slate-400 hover:border-emerald-500 hover:text-emerald-500">Load Archives</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="archive-portal" class="fixed inset-0 z-[55] flex items-center justify-center bg-black/90 backdrop-blur-xl hidden">
-        <div class="max-w-2xl w-full p-8 shard rounded-sm">
-            <div class="flex justify-between items-center mb-6 border-b border-emerald-900/30 pb-4">
-                <h2 class="cinzel text-2xl emerald-text uppercase">Stored_Nodes</h2>
-                <button onclick="toggleArchiveList(false)" class="text-slate-500 hover:text-white text-xl">✕</button>
-            </div>
-            <div id="session-list" class="space-y-3 max-h-[60vh] overflow-y-auto pr-2"></div>
-        </div>
-    </div>
-
-    <div id="name-modal" class="fixed inset-0 z-[70] flex items-center justify-center bg-black/95 backdrop-blur-md hidden">
-        <div class="max-w-sm w-full p-8 shard text-center">
-            <h2 id="modal-title" class="cinzel text-xl emerald-text mb-2 uppercase">Sync_Node</h2>
-            <input type="text" id="session-name" placeholder="NODE_NAME" class="config-input mb-6 text-center uppercase tracking-widest">
-            <div class="flex flex-col gap-3">
-                <button id="modal-confirm-btn" class="btn-zombie">Commit</button>
-                <button onclick="closeNameModal()" class="text-[9px] text-slate-500 uppercase">Return</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="config-page" class="hidden max-w-4xl mx-auto">
-        <div class="shard p-10">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="md:col-span-2 border-b border-emerald-900/30 pb-2 mb-4">
-                    <span class="text-[10px] cinzel text-emerald-500 font-bold tracking-widest uppercase font-black">Calibration_Node</span>
+    <div class="grid grid-cols-12 gap-4 flex-grow overflow-hidden">
+        
+        <div class="col-span-3 shard p-4 flex flex-col overflow-hidden">
+            <h3 class="text-[9px] cinzel emerald-text mb-4 uppercase tracking-widest border-b border-emerald-900/30 pb-2">Wheel_History</h3>
+            <div id="history-log" class="overflow-y-auto flex-grow pr-2">
                 </div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Wheel</label><select id="wheel-type" class="config-input"><option value="EU">European</option><option value="US">American</option><option value="TZ">Triple Zero</option></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Main Domain</label><select id="main-domain" class="config-input" onchange="updateSubDomains()"><option value="inside">Inside</option><option value="outside">Outside</option></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Category</label><select id="sub-domain" class="config-input" onchange="updateSubTypes()"></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Protocol</label><select id="sub-type" class="config-input"></select></div>
-                <div><label class="text-[9px] uppercase font-bold text-emerald-500 block mb-2">Unit</label><input type="number" id="base-unit" class="config-input" value="1" step="0.1"></div>
-                <div class="md:col-span-2 mt-8"><button onclick="saveAndLaunch()" class="btn-zombie w-full tracking-[0.4em]">Initialize_Node</button></div>
+        </div>
+
+        <div class="col-span-9 flex flex-col gap-4">
+            <div class="shard p-6 flex justify-around text-center">
+                <div><div class="text-[8px] text-slate-500 uppercase">Bankroll</div><div id="hud-bank" class="cinzel emerald-text text-xl">1000.0</div></div>
+                <div><div class="text-[8px] text-slate-500 uppercase">Current Bet</div><div id="hud-bet" class="cinzel text-xl">0.0</div></div>
+                <div><div class="text-[8px] text-slate-500 uppercase">Last Hit</div><div id="hud-last" class="cinzel text-xl">--</div></div>
+            </div>
+
+            <div class="shard p-4 flex-grow grid grid-cols-3 gap-2">
+                <button onclick="inputRoll(0)" class="col-span-3 numpad-btn emerald-text" style="border-color: var(--emerald)">0</button>
+                <script>
+                    for(let i=1; i<=36; i++) {
+                        document.write(`<button onclick="inputRoll(${i})" class="numpad-btn">${i}</button>`);
+                    }
+                </script>
             </div>
         </div>
-    </div>
-
-    <div id="tracker-temp" class="hidden flex flex-col items-center justify-center min-h-[60vh] text-center">
-        <h1 class="cinzel text-6xl emerald-text animate-pulse mb-8 uppercase">Live_Node</h1>
-        <div id="sync-info" class="bg-black/40 p-6 border border-emerald-950/50 text-[10px] text-slate-400 uppercase tracking-[0.3em] mb-12"></div>
-        <button onclick="showConfig()" class="btn-zombie">Settings</button>
     </div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBSUXdz7HqwkENhQqEJLItxYm-LAwkgbmY", authDomain: "zombielords-playhouse.firebaseapp.com", projectId: "zombielords-playhouse", storageBucket: "zombielords-playhouse.firebasestorage.app", messagingSenderId: "795162260246", appId: "1:795162260246:web:97f0361751ac1359b31637" };
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth(); const db = firebase.firestore();
-        let currentUser = null; let currentActiveData = null; let editingSessionId = null;
+        let sessionData = null; let rollHistory = [];
 
-        const lockedMap = {
-            inside: { lines: ["6-Line Hybrid", "Double Line"], streets: ["3-Street", "Cold Hunt"], splits: ["Corner Split", "Vertical"], baskets: ["0-1-2-3 Basket"] },
-            outside: { dozens: ["Single Dozen", "Double"], columns: ["Standard", "Switch"], even_money: ["Red/Black", "Odd/Even"] }
-        };
+        async function initTracker() {
+            const user = auth.currentUser;
+            const doc = await db.collection("users").doc(user.uid).collection("sessions").doc("active_session").get();
+            if (doc.exists) {
+                sessionData = doc.data();
+                document.getElementById('active-protocol').innerText = `PROTOCOL: ${sessionData.protocol} | UNIT: ${sessionData.unit} | WHEEL: ${sessionData.wheel}`;
+            }
+        }
+
+        function inputRoll(n) {
+            const time = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+            rollHistory.unshift({ num: n, time: time });
+            document.getElementById('hud-last').innerText = n;
+            renderHistory();
+        }
+
+        function renderHistory() {
+            const log = document.getElementById('history-log');
+            log.innerHTML = rollHistory.map(r => `
+                <div class="history-pill">
+                    <span class="text-emerald-500 font-bold mr-2">#${r.num}</span>
+                    <span class="text-slate-600 font-mono">${r.time}</span>
+                </div>
+            `).join('');
+        }
 
         auth.onAuthStateChanged(user => {
             if (!user) window.location.href = "index.html";
-            else { currentUser = user; document.getElementById('entry-portal').classList.remove('hidden'); }
+            else initTracker();
         });
-
-        // Initialize listeners once DOM is ready to prevent White Screen crash
-        document.addEventListener('DOMContentLoaded', () => {
-            const nameInput = document.getElementById('session-name');
-            if (nameInput) {
-                nameInput.addEventListener('keypress', (e) => {
-                    if (e.key === 'Enter') {
-                        const title = document.getElementById('modal-title').innerText;
-                        title.includes('RENAME') ? confirmRename() : confirmArchive();
-                    }
-                });
-            }
-        });
-
-        async function deleteSession(id) {
-            const el = document.querySelector(`[data-id="${id}"]`);
-            if (el) el.style.opacity = "0.3";
-            await db.collection("users").doc(currentUser.uid).collection("sessions").doc(id).delete();
-            refreshArchiveList();
-        }
-
-        async function refreshArchiveList() {
-            const listDiv = document.getElementById('session-list');
-            listDiv.innerHTML = '<p class="text-[9px] animate-pulse text-slate-500 uppercase">Polling Vault...</p>';
-            const snapshot = await db.collection("users").doc(currentUser.uid).collection("sessions").orderBy("timestamp", "desc").get();
-            listDiv.innerHTML = '';
-            snapshot.forEach(doc => {
-                const data = doc.data();
-                const sessionEl = document.createElement('div');
-                sessionEl.className = "flex items-center gap-2 mb-2";
-                sessionEl.setAttribute('data-id', doc.id);
-                sessionEl.innerHTML = `
-                    <button class="flex-grow text-left p-4 border border-slate-800 hover:border-emerald-500/50 text-[10px] uppercase bg-black/40 transition-all flex justify-between items-center" onclick='loadSession(${JSON.stringify(data)})'>
-                        <div>${doc.id === "active_session" ? "<span class='text-blood mr-2'>[ACTIVE]</span>" : ""}<span class="text-emerald-500 font-bold tracking-widest">${data.name || 'UNNAMED'}</span></div>
-                        <span class="text-slate-600 text-[8px]">${new Date(data.timestamp?.seconds * 1000).toLocaleDateString()}</span>
-                    </button>
-                    <button class="p-4 border border-slate-800 text-slate-500 hover:text-emerald-500 hover:border-emerald-500" onclick='triggerRename("${doc.id}", "${data.name}")'>✎</button>
-                    <button class="p-4 border border-slate-800 text-slate-500 hover:text-blood hover:border-blood" onclick='deleteSession("${doc.id}")'>✕</button>
-                `;
-                listDiv.appendChild(sessionEl);
-            });
-        }
-
-        function triggerRename(id, oldName) {
-            editingSessionId = id;
-            document.getElementById('modal-title').innerText = "Rename_Node";
-            document.getElementById('session-name').value = oldName;
-            document.getElementById('modal-confirm-btn').onclick = confirmRename;
-            document.getElementById('name-modal').classList.remove('hidden');
-        }
-
-        async function confirmRename() {
-            const name = document.getElementById('session-name').value.toUpperCase();
-            if (name && editingSessionId) {
-                await db.collection("users").doc(currentUser.uid).collection("sessions").doc(editingSessionId).update({ name: name });
-                closeNameModal();
-                refreshArchiveList();
-            }
-        }
-
-        async function confirmArchive() {
-            const name = document.getElementById('session-name').value.toUpperCase() || "UNNAMED_TRIAL";
-            if (currentActiveData) {
-                const archiveData = { ...currentActiveData, name: name, timestamp: firebase.firestore.FieldValue.serverTimestamp() };
-                await db.collection("users").doc(currentUser.uid).collection("sessions").add(archiveData);
-                await db.collection("users").doc(currentUser.uid).collection("sessions").doc("active_session").delete();
-            }
-            auth.signOut().then(() => { window.location.href = "index.html"; });
-        }
-
-        function triggerLogout() {
-            document.getElementById('modal-title').innerText = "Archive_Session";
-            document.getElementById('session-name').value = "";
-            document.getElementById('modal-confirm-btn').onclick = confirmArchive;
-            document.getElementById('name-modal').classList.remove('hidden');
-        }
-
-        function toggleArchiveList(show) { document.getElementById('archive-portal').classList.toggle('hidden', !show); if(show) refreshArchiveList(); }
-        function closeNameModal() { document.getElementById('name-modal').classList.add('hidden'); }
-        function loadSession(data) { currentActiveData = data; syncInputs(data); launchUI(); toggleArchiveList(false); }
-        function syncInputs(d) {
-            document.getElementById('wheel-type').value = d.wheel; document.getElementById('main-domain').value = d.domain;
-            updateSubDomains(); document.getElementById('sub-domain').value = d.sub;
-            updateSubTypes(); document.getElementById('sub-type').value = d.type;
-            document.getElementById('base-unit').value = d.unit;
-            document.getElementById('sync-info').innerHTML = `NODE_SYNCHRONIZED: ${d.name || 'ACTIVE'}<br>PROTOCOL: ${d.type}`;
-        }
-        function updateSubDomains() {
-            const d = document.getElementById('main-domain').value;
-            document.getElementById('sub-domain').innerHTML = Object.keys(lockedMap[d]).map(k => `<option value="${k}">${k.toUpperCase()}</option>`).join('');
-            updateSubTypes();
-        }
-        function updateSubTypes() {
-            const d = document.getElementById('main-domain').value; const s = document.getElementById('sub-domain').value;
-            document.getElementById('sub-type').innerHTML = lockedMap[d][s].map(t => `<option value="${t}">${t}</option>`).join('');
-        }
-        function showConfig() { document.getElementById('entry-portal').classList.add('hidden'); document.getElementById('config-page').classList.remove('hidden'); if(!document.getElementById('sub-domain').innerHTML) updateSubDomains(); }
-        async function saveAndLaunch() {
-            const config = { name: "ACTIVE_SESSION", wheel: document.getElementById('wheel-type').value, domain: document.getElementById('main-domain').value, sub: document.getElementById('sub-domain').value, type: document.getElementById('sub-type').value, unit: document.getElementById('base-unit').value, timestamp: firebase.firestore.FieldValue.serverTimestamp() };
-            currentActiveData = config; await db.collection("users").doc(currentUser.uid).collection("sessions").doc("active_session").set(config); launchUI();
-        }
-        function launchUI() { document.getElementById('entry-portal').classList.add('hidden'); document.getElementById('config-page').classList.add('hidden'); document.getElementById('tracker-temp').classList.remove('hidden'); }
     </script>
 </body>
 </html>
